# foliot

./: .gitignore  AUTHORS  INSTALL  Makefile.am  NEWS  README  autogen.sh  c-dialog.scm  colours.scm  config.scm  configure.ac  connect.scm  db-con.scm  db-imported-db.scm  db-kise.scm  db-printing-templates.scm  db-shinning.scm  db.scm  env.in  globals.scm  gtkrc.kise  i-dialog.scm  import.scm  iter.scm  kise.scm  main.scm  p-commercial.scm  p-common.scm  p-dialog.scm  p-draft.scm  p-lvars.scm  p-main.scm  pre-inst-env.in  print.scm  strings.scm  tl-widget.scm
am/: guile.mk
doc/: .gitignore  Makefile.am  foliot.texi  introduction.texi  kise.texi  preface.texi  using-foliot.texi  using-kise.texi  variables.texi  version.texi
foliot/: c-dialog.scm  colours.scm  config.scm  connect.scm  db-con.scm  db-foliot.scm  db-imported-db.scm  db-printing-templates.scm  db-shinning.scm  db.scm  foliot.in  foliot.scm  globals.scm  i-dialog.scm  import.scm  iter.scm  p-commercial.scm  p-common.scm  p-dialog.scm  p-draft.scm  p-lvars.scm  p-main.scm  print.scm  tl-widget.scm
foliot/glade/: foliot.glade
foliot/gtkrc/: gtkrc.foliot
foliot/latex/: colordefs.tex  draft-commandes.tex  draft-packages.tex  global-variables.tex
foliot/pof/: foliot.pot
foliot/sqlite/: schema.sql
glade/: .gitignore  kise.glade
kise/: c-dialog.scm  colours.scm  config.scm  connect.scm  db-con.scm  db-imported-db.scm  db-kise.scm  db-printing-templates.scm  db-shinning.scm  db.scm  globals.scm  i-dialog.scm  import.scm  iter.scm  kise.in  kise.scm  main.scm  p-commercial.scm  p-common.scm  p-dialog.scm  p-draft.scm  p-lvars.scm  p-main.scm  print.scm  settings.scm  tl-widget.scm
kise/gtkrc/: gtkrc.kise
kise/icons/: full-pie-24x24-grey-2.xcf  pie-24x24-color-2.xcf
kise/latex/: colordefs.tex  draft-commandes.tex  draft-packages.tex  global-variables.tex
kise/pof/: kise.pot
kise/pof/fr_BE/: kise.po
kise/pof/fr_BE/LC_MESSAGES/: kise.mo
kise/sqlite/: schema.sql
latex/: colordefs.tex  draft-commandes.tex  draft-packages.tex  global-variables.tex
m4/: guile-gnome-2.m4  guile.m4  latex.m4
meta/: guild.in
ogwanda/: .gitignore  README  generics.scm  markup-extensions.scm  p-draft-ltx.scm  tree-ops.scm  what-tree-1.scm  what-tree.scm
org/: foliot-bugs.org  foliot.org  kise-bugs.org  kise.org
pof/fr_BE/: kise.po
sqlite/: schema.sql
test-suite/: Makefile.am
test-suite/tests/: globals.scm
